fixed general code

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div class="header" id="myHeader">Bridge of Death Quiz Challenge</div>
     <div class="d-flex justify-content-between">
-        <a href="highscore.html" id="highscores">View Highscores</a>
+        <a href="highscore.html" id="highscores">View High Scores</a>
         <div id="timer">75</div>
     </div>
 
-    <div id="main">
+    <div id="main" class="container">
         <div class="container" id="startQuiz">
             <h1>Start Quiz</h1>
         </div>
@@ -25,7 +25,7 @@
         <div class="container" id="startQuizIntro">
             STOP! Whoever approacheth the Bridge of Death must answer me these questions three, ere the other side he see. A wrong answer results in less time for thee.
         </div>
-        <button id="start">Start Quiz!</button>
+        <button id="start">Begin Thy Test!</button>
 
         <div class="container" id="questionTitle"></div>
         <div class="container" id="questionChoices"></div>
