--- a/highscore.html
+++ b/highscore.html
@@ -18,23 +18,12 @@
         <div id="timer">75</div>
     </div>
     <div class="container">
-        <ul id="highScoreList" class="list-group">
+        <h1>High Score List</h1>
+        <ul id="highScoreList" class="list-group w-25">
 
 
         </ul>
-        <!-- <div class="userInput">
-            <h1>All done!</h1>
-            <p id="finalScore"></p>
-            <label>Enter Initals:</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="" aria-label="Recipient's username" aria-describedby="button-addon2" />
-                <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">
-              Submit
-            </button>
-                </div>
-            </div>
-        </div> -->
+        
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
