--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div id="timer">75</div>
     </div>
 
-    <div id="main" class="container">
+    <div id="main" class="container text-center">
         <div class="container" id="startQuiz">
             <h1>Start Quiz</h1>
         </div>
