--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="container" id="startQuizIntro">
-            STOP! Whoever approacheth the Bridge of Death must answer me these questions three, ere the other side he see. A wrong answer results in less time for thee.
+            STOP! Whoever approacheth the Bridge of Death must answer me these questions ye, ere the other side he see. A wrong answer results in less time for thee. So sayeth, the Knights of NI!
         </div>
         <button id="start">Begin Thy Test!</button>
 
